...
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        >

        <Button
            android:id="@+id/delete_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="delete" />

        <Button
            android:id="@+id/save_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="save" />

        <TableRow
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="search name: "
                android:textSize="18sp" />

            <EditText
                android:id="@+id/search_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
                android:hint="new search"
                />

        </TableRow>

...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="location: "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/search_location_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="current location"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                </TableRow>
...
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center">

                        <fragment android:id="@+id/autocomplete_fragment"
                            android:layout_width="360dp"
                            android:layout_height="match_parent"
                            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                            />

                    </androidx.cardview.widget.CardView>
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="distance range (km):"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/distance_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="3"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_row0"
            >

            <CheckBox
                android:id="@+id/activity_groceries_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="groceries" />

            <CheckBox
                android:id="@+id/activity_entertainment_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="entertainment" />
            <CheckBox
                android:id="@+id/activity_bulkBuy_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="bulk buy" />
        </TableRow>

        <TableRow
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_row1"
            android:layout_marginBottom="20dp">

            <CheckBox
                android:id="@+id/activity_hiking_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="hiking" />

            <CheckBox
                android:id="@+id/activity_restaurants_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="restaurants" />
            <CheckBox
                android:id="@+id/activity_fashion_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="fashion" />

            <CheckBox
                android:id="@+id/activity_books_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="books" />
        </TableRow>

        <TableRow
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="budget (CAD):"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/budget_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:ems="10"
                android:hint="$0"
                android:inputType="number"
...
